--- a/Servidor/cava/index.html
+++ b/Servidor/cava/index.html
@@ -18,18 +18,54 @@
 
     <script>
 
+    var desdeAno, desdeMes, desdeDia, desdeHora, desdeMinuto;
+    var hastaAno, hastaMes, hastaDia, hastaHora, hastaMinuto;
+
     $( function() {
 
       $( "#desdeFecha" ).datepicker( datepickerEspanol );
-      $( '#desdeHora' ).wickedpicker();
+      $( '#desdeHora' ).wickedpicker( { twentyFour: true } );
 
       $( "#hastaFecha" ).datepicker( datepickerEspanol );
-      $( '#hastaHora' ).wickedpicker();
+      $( '#hastaHora' ).wickedpicker( { twentyFour: true } );
 
     });
 
-    function hola(){
-      alert( "Bien" );
+    function procesarFechasYHoras( idFecha, idHora ){
+      let UTC_Argentina = -3;
+
+      //let desde = document.getElementById( "desdeFecha" ).value; // Siempre amare <3 a Vanilla JS :B
+      let fecha = $( idFecha ).val();
+      fecha = fecha.split( "/" );
+      for( let i = 0; i < fecha.length; i++ ){
+        fecha[ i ] = parseInt( fecha[ i ] );
+      }
+
+      let hora = $( idHora ).val();
+      hora = hora.split( ":" );
+      for( let i = 0; i < hora.length; i++ ){
+        hora[ i ] = parseInt( hora[ i ] );
+      }
+
+      let unix = new Date( Date.UTC(
+        fecha[2], fecha[1]-1, fecha[0],
+        hora[0] - UTC_Argentina, hora[1], 0
+      ) );
+
+      return (unix.getTime() / 1000);
+
+    }
+
+    function verDatos(){
+
+      let desdeUnix = procesarFechasYHoras( "#desdeFecha", "#desdeHora" );
+      let hastaUnix = procesarFechasYHoras( "#hastaFecha", "#hastaHora" );
+
+      if( !isNaN( desdeUnix ) && !isNaN( hastaUnix ) ){
+        let url = 'verdatos.php?desde=' + desdeUnix + "&hasta=" + hastaUnix;
+        window.open( url , '_blank');
+      }
+
     }
 
     </script>
@@ -42,28 +78,59 @@
       <h2>Cava testing</h2>
     </div>
 
-    <div class="w3-row w3-border">
+    <div class="w3-row">
 
-      <div class="w3-container w3-half">
-        <h3>Desde:</h3>
-        <p>Fecha: <input type="text" id="desdeFecha"></p>
-        <p>Hora: <input type="text" name="desdeHora" id="desdeHora"/></p>
+      <div class="w3-container w3-third">
+        <div class="w3-card">
+
+          <header class="w3-container w3-light-gray" style="text-align:center;">
+            <h6>16:31 18/02/2021</h6>
+          </header>
+
+          <div class="w3-container" style="text-align:center;">
+            <p>
+              Temperatura de la Cava:<br />
+              <span style="font-size:x-large;">27.25</span><br />
+              Voltaje: 3.30
+            </p>
+            <p>
+              Temperatura deseada: 24
+            </p>
+          </div>
+
+          <footer class="w3-container" style="text-align:center;">
+              <button class="w3-button w3-black w3-third">-</button>
+              <span class="w3-third" style="font-size:large;">28</span>
+              <button class="w3-button w3-black w3-third">+</button>
+          </footer>
+
+        </div><!--cierro la card-->
       </div>
 
-      <div class="w3-container w3-half">
-        <h3>Hasta:</h3>
-        <p>Fecha: <input type="text" id="hastaFecha"></p>
-        <p>Hora: <input type="text" name="hastaHora" id="hastaHora"/></p>
+      <div class="w3-container w3-twothird w3-border">
+
+        <div class="w3-container w3-half">
+          <h3>Desde:</h3>
+          <p>Fecha: <input type="text" id="desdeFecha"></p>
+          <p>Hora: <input type="text" name="desdeHora" id="desdeHora"/></p>
+        </div>
+
+        <div class="w3-container w3-half">
+          <h3>Hasta:</h3>
+          <p>Fecha: <input type="text" id="hastaFecha"></p>
+          <p>Hora: <input type="text" name="hastaHora" id="hastaHora"/></p>
+        </div>
+
+        <div class="w3-container">
+          <p>
+            <button class="w3-button w3-black" onclick="verDatos()">Ver datos</button>
+            <button class="w3-button w3-black">Graficar</button>
+            <button class="w3-button w3-black">Exportar .csv</button>
+          </p>
+        </div>
+
       </div>
 
-    </div>
-
-    <div class="w3-container" >
-      <p>
-        <button class="w3-button w3-black" onclick="hola()">Ver datos</button>
-        <button class="w3-button w3-black">Graficar</button>
-        <button class="w3-button w3-black">Exportar .csv</button>
-      </p>
     </div>
 
   </body>
