--- a/Servidor/cava/index.html
+++ b/Servidor/cava/index.html
@@ -21,6 +21,8 @@
     var desdeAno, desdeMes, desdeDia, desdeHora, desdeMinuto;
     var hastaAno, hastaMes, hastaDia, hastaHora, hastaMinuto;
 
+    setInterval( getAjaxDatos, 3000 );
+
     $( function() {
 
       $( "#desdeFecha" ).datepicker( datepickerEspanol );
@@ -68,6 +70,17 @@
 
     }
 
+    function getAjaxDatos(){
+      var xhttp = new XMLHttpRequest();
+      xhttp.onreadystatechange = function() {
+        if (this.readyState == 4 && this.status == 200) {
+         document.getElementById("ajax_datos").innerHTML = this.responseText;
+        }
+      };
+      xhttp.open("GET", "ajax_datos.php", true);
+      xhttp.send();
+    }
+
     </script>
 
   </head>
@@ -83,7 +96,7 @@
       <div class="w3-container w3-third">
         <div class="w3-card">
 
-          <header class="w3-container w3-light-gray" style="text-align:center;">
+          <!--<header class="w3-container w3-light-gray" style="text-align:center;">
             <h6>16:31 18/02/2021</h6>
           </header>
 
@@ -96,7 +109,8 @@
             <p>
               Temperatura deseada: 24
             </p>
-          </div>
+          </div>-->
+          <div id="ajax_datos"></div>
 
           <footer class="w3-container" style="text-align:center;">
               <button class="w3-button w3-black w3-third">-</button>
